--- a/index.html
+++ b/index.html
@@ -8,83 +8,26 @@
 </head>
 <body>
     <header>
-        <div class="container">
-            <h1>Raise Buildings and Solutions</h1>
-            <nav>
-                <ul>
-                    <li><a href="#home">Home</a></li>
-                    <li><a href="#about">About Us</a></li>
-                    <li><a href="#services">Services</a></li>
-                    <li><a href="#projects">Projects</a></li>
-                    <li><a href="#testimonials">Testimonials</a></li>
-                    <li><a href="#contact">Contact Us</a></li>
-                </ul>
-            </nav>
-        </div>
+        <h1>Welcome to Raise Buildings and Solutions</h1>
+        <p>Your trusted partner in civil engineering solutions.</p>
     </header>
-    <main>
-        <!-- Home Section -->
-        <section id="home" class="section">
-            <h2>Welcome to Raise Buildings and Solutions</h2>
-            <p>Your trusted partner in civil engineering and construction solutions.</p>
-            <p>We specialize in a wide range of construction services including residential, commercial, and industrial projects.</p>
-            <p>With a commitment to quality, innovation, and client satisfaction, we deliver projects that exceed expectations.</p>
-            <p>Explore our services below or <a href="#contact">contact us</a> today to discuss your next project.</p>
-        </section>
-        <!-- Other Sections -->
-        <section id="about" class="section">
-            <h2>About Us</h2>
-            <p>We are a team of experienced civil engineers based in Kanhirode, Kerala, dedicated to delivering top-notch building and construction solutions.</p>
-            <p>With over 20 years of experience in the industry, we have successfully completed numerous projects ranging from residential homes to large-scale commercial buildings.</p>
-        </section>
-        <section id="services" class="section">
-            <h2>Our Services</h2>
-            <ul>
-                <li>Residential Construction</li>
-                <li>Commercial Construction</li>
-                <li>Industrial Construction</li>
-                <li>Renovations and Remodeling</li>
-                <li>Project Management</li>
-            </ul>
-        </section>
-        <section id="projects" class="section">
-            <h2>Our Projects</h2>
-            <p>Take a look at some of our completed and ongoing projects.</p>
-            <img src="project1.jpg" alt="Project 1">
-            <img src="project2.jpg" alt="Project 2">
-        </section>
-        <section id="testimonials" class="section">
-            <h2>Testimonials</h2>
-            <p>Here’s what our clients have to say about our work.</p>
-            <blockquote>
-                <p>"Raise Buildings and Solutions exceeded our expectations with their professionalism and quality of work. Highly recommend!" - Client A</p>
-            </blockquote>
-            <blockquote>
-                <p>"Excellent service and timely delivery. Our project was handled with utmost care and expertise." - Client B</p>
-            </blockquote>
-        </section>
-        <section id="contact" class="section">
-            <h2>Contact Us</h2>
-            <p>Get in touch with us for any inquiries or project discussions.</p>
-            <form id="contactForm">
-                <label for="name">Name:</label>
-                <input type="text" id="name" name="name" required>
-                <br>
-                <label for="email">Email:</label>
-                <input type="email" id="email" name="email" required>
-                <br>
-                <label for="message">Message:</label>
-                <textarea id="message" name="message" required></textarea>
-                <br>
-                <button type="submit">Submit</button>
-            </form>
-            <p id="formMessage"></p>
-        </section>
-    </main>
-    <footer>
-        <p>&copy; 2024 Raise Buildings and Solutions. All rights reserved.</p>
-    </footer>
-    <script src="scripts.js"></script>
+    <section id="services">
+        <h2>Our Services</h2>
+        <ul>
+            <li>Residential Construction</li>
+            <li>Commercial Construction</li>
+            <li>Project Management</li>
+            <li>Consulting</li>
+        </ul>
+    </section>
+    <section id="about">
+        <h2>About Us</h2>
+        <p>We are a team of experienced civil engineers based in Kanhirode, Kerala, committed to delivering high-quality building solutions.</p>
+    </section>
+    <section id="contact">
+        <h2>Contact Us</h2>
+        <p>Email: info@raisebuildings.com</p>
+        <p>Phone: +91-1234567890</p>
+    </section>
 </body>
 </html>
-
