--- a/index.html
+++ b/index.html
@@ -31,4 +31,9 @@
     </section>
 </body>
 </html>
+<section id="testimonials">
+    <h2>Testimonials</h2>
+    <p>"Raise Buildings and Solutions provided exceptional service for our residential project. Highly recommend!" - John Doe</p>
+    <p>"Professional and efficient team. Our commercial building was completed on time and within budget." - Jane Smith</p>
+</section>
 
